# ruediPy

./: .gitignore  LICENSE  MS_filament.py  MS_scan.py  MS_tools.py  README.md  README.txt  TO_DO.txt  VERSIONING_RELEASES.md  miniruedi.m  pyproject.toml  rga_IO.py
.github/workflows/: ci.yml
classes/: ._rgams.py  rgams.py
data/: 2016-04-04_11-43-02.txt
documentation/: CONFIG_NOTES.txt
documentation/ruediPy/: list_python_API.py  makedoc.py  python_API.py  python_API.tex  ruediPyLit.bib  ruediPy_manual.tex
legacy_octave/: README.md
legacy_octave/octave/: rP_digest_step_DATAFILEINFO.m
measurescripts/: FILE-TEST.py  HW-TEST.py  TEST.py
octave/: rP_atmos_gas.m  rP_calibrate_batch.m  rP_calibrate_batch_noBlankCompensation.m  rP_calibrate_steps.m  rP_convert_pp_to_conc.m  rP_digest_step.m  rP_digest_step_DATAFILEINFO.m  rP_digest_step_PRESSURESENSOR_WIKA-OLD.m  rP_digest_step_PRESSURESENSOR_WIKA.m  rP_digest_step_RGA_SRS.m  rP_digest_step_SENSOR.m  rP_digest_step_TEMPERATURESENSOR_MAXIM.m  rP_digest_step_TEMPERATURE_MAXIM.m  rP_epochtime2datenum.m  rP_get_PRESS.m  rP_get_TEMP.m  rP_get_output_filename.m  rP_normalize_PP.m  rP_normalize_pp.m  rP_rawextract.m  rP_read_datafile.m  rP_read_datafile_old_slow_but_good.m  rP_read_pp_resultsfile.m  rP_read_resultsfile.m  rP_struct2table.m  rP_write_PP_datafile.m  rP_write_pp_datafile.m  ruediPy_read_datafile.m
octave/octave/: rP_calibrate_batch.m  rP_digest_step_RGA_SRS.m  rP_get_output_filename.m  rP_struct2table.m
octave/stuff/: readline.m
oldstuff/: BASIS_CONFIGFILE.py  basis_proc.m  basis_spectra.eps
oldstuff/data/: 2016-04-04_11-44-36.txt
oldstuff/deconvtests/: SRS_DECONVTEST_CH4 (copy).py  SRS_DECONVTEST_CH4.py  SRS_DECONVTEST_NeArH2O.py  SRS_DECONVTEST_NeArH2O_BASISMEASURE.py  SRS_DECONV_BASISMEASURE.py  basis_measurements.txt
python/: MS_terminal.py  TEST.py
python/classes/: ._rgams.py  __init__.py  datafile.py  misc.py  plots.py  pressuresensor_ARDUINO.py  pressuresensor_OMEGA.py  pressuresensor_VIRTUAL.py  pressuresensor_WIKA.py  rgams.py  rgams_SRS.py  rgams_SRS_virtual.py  (+6 more)
tests/: ._TEST.py  ARDUIONOPSENSTEST.py  FILAMENTOFF.py  FULLSCAN_F.py  FULLSCAN_M.py  MAXIMTEST.py  MAXIMTEST_TWO.py  MULTIVICITEST.py  OMEGATEST.py  OMEGATEST_DEV.py  SRSTEST.py  TEST.py  TEST_for_MR1.py  TEST_for_MR5.py  TUNETEST.py  VICITEST.py  VIRTUALPRESSTEST.py  VIRTUALSRSTEST.py  VIRTUALTTEST.py  WIKATEST.py  test_import.py
(+46 files in other folders)
