[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ruedipy"
version = "0.1.0"
description = "ruediPy"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }

authors = [
  { name = "Matthias Brennwald" }
]

# Add runtime dependencies here when you know them, e.g. ["numpy>=1.26"]
dependencies = []

# Useful metadata for PyPI / tooling
classifiers = [
  "License :: OSI Approved :: GNU General Public License (GPL)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
]

[project.urls]
Repository = "https://github.com/brennmat/ruediPy"
Issues = "https://github.com/brennmat/ruediPy/issues"

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

